creating the drag and drop (no styling)